--- a/styles/style.css
+++ b/styles/style.css
@@ -17,3 +17,93 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+/* shared styles */
+.primary-color{
+    color: #E95A08;
+}
+.dark-1{
+    color: black;
+}
+.dark-2{
+    color: #111111;
+}
+.dark-3{
+    color: rgba(0, 0, 0, 0.5);
+}
+.dark-4{
+    color: #252432;
+}
+.dark-5{
+    color: #8987A1;
+}
+.display-flex{
+    display: flex;
+}
+.hide{
+    display: none;
+}
+/* navbar styles */
+.header{
+    max-width: 1220px;
+    margin: 2rem auto;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar{
+    height: 4.2rem;
+}
+.navbar .logo img{
+    height: 4.2rem;
+}
+
+.nav-item li{
+    list-style: none;
+    padding-left: 2rem;
+}
+.nav-item li a{
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 500;
+}
+#home{
+    font-weight: 700;
+}
+/* banner styles */
+.banner{
+    max-width: 1220px;
+    margin: 7.5rem auto;
+    justify-content: space-between;
+}
+.banner-left{
+    max-width: 570px;
+}
+.banner-right{
+    align-items: flex-end;
+}
+.banner-right img{
+    width: 100%;
+    bottom: 22.25rem;
+}
+.banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+
+
+/* Responsive design for mobile*/
+@media screen and  (max-width:576px){
+     .header .nav-item .hidden-items{
+        display: none;
+     }
+    .banner{
+      flex-direction: column-reverse;
+    }
+    .banner-left{
+        width: 100%;
+    }
+    .banner-title{
+        font-size: 2rem;
+    }
+}
