added our-plant section

--- a/styles/style.css
+++ b/styles/style.css
@@ -89,8 +89,45 @@
     font-size: 4rem;
     font-weight: 700;
 }
-
-
+/* Our plant style */
+.our-plant{
+    max-width: 1220px;
+    margin: 7.5rem auto;
+    text-align: center;
+}
+.our-plant-title{
+    font-size: 3.1rem;
+    font-weight: 700;
+}
+.our-plant-description{
+    font-size: 1.4rem;
+}
+.card-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    max-width: calc(100% - 30px);
+}
+.card img{
+    width: 100%;
+}
+.card-title{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+.card-price{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.add-to-cart-btn{
+    width: 100%;
+    background-color: #E95A08;
+    border: none;
+    color: white;
+    padding: 13px 0px;
+    font-size: 1rem;
+    text-transform: uppercase;
+}
 
 /* Responsive design for mobile*/
 @media screen and  (max-width:576px){
@@ -105,5 +142,11 @@
     }
     .banner-title{
         font-size: 2rem;
+    }
+    .our-plant{
+        width: 100%;
+    }
+    .card-container{
+        grid-template-columns: repeat(2,1fr);
     }
 }
