--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,32 @@
     font-size: 1rem;
     text-transform: uppercase;
 }
+/* flower lover styles */
+.flower-lover{
+    max-width: 1220px;
+    margin: 7.5rem auto;
+    justify-content: space-between;
+    gap: 30px;
+    align-items: center;
+}
+.flower-lover .img{
+    width: 540px;
+}
+.flower-lover .img img{
+    width: 100%;
+}
+.flower-lover-content{
+    max-width: 540px;
+    padding: 44px;
+}
+.flower-lover-title{
+    font-size: 3.1rem;
+    font-weight: 700;
+}
+.flower-lover-content ul li{
+    font-size: 22px;
+    font-weight: 500;
+}
 
 /* Responsive design for mobile*/
 @media screen and  (max-width:576px){
@@ -148,5 +174,8 @@
     }
     .card-container{
         grid-template-columns: repeat(2,1fr);
+    }
+    .flower-lover{
+        flex-direction: column;
     }
 }
