--- a/styles/style.css
+++ b/styles/style.css
@@ -154,7 +154,36 @@
     font-size: 22px;
     font-weight: 500;
 }
-
+/* join section styles */
+.join{
+    background-image: url('../assets/news-letter-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 1220px;
+    margin: 7.5rem auto;
+    padding: 190px 275px;
+    align-items: center;
+    margin: 0px auto;
+}
+.join-title{
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+}
+#email{
+    padding: 15px;
+    width: 80%;
+}
+.subscribe-btn{
+    width: calc(100% -5px);
+    padding: 15px 30px;
+    margin-left: -3px;
+    background-color: #E95A08;
+    color: white;
+    border: none;
+    font-size: 1rem;
+}
 /* Responsive design for mobile*/
 @media screen and  (max-width:576px){
      .header .nav-item .hidden-items{
@@ -178,4 +207,21 @@
     .flower-lover{
         flex-direction: column;
     }
+    .flower-lover .img{
+        width: 90%;
+    }
+    .join{
+        padding: 70px 15px;
+    }
+    .join-title{
+        font-size: 2rem;
+    }
+    #email{
+        width: 60%;
+    }
+    .subscribe-btn{
+        width: calc(100% - 75%);
+        padding: 15px 0px;
+    }
+    
 }
