--- a/styles/style.css
+++ b/styles/style.css
@@ -161,10 +161,11 @@
 }
 .badge{
     position: absolute;
-    height: 300px;
-    width: 300px;
-    top: -180px;
+    height: 250px;
+    width: 250px;
+    top: -145px;
     left: -200px;
+    background-color: 1px solid black;
 }
 .badge img{
     width: 100%;
